--- a/html/detailSearch.html
+++ b/html/detailSearch.html
@@ -17,10 +17,10 @@
             <tr>
                 <td><input type="text" id="sword" style="width:200px; height: 20px;"></td>
             <tr>
-                <td>include or exclude files or folders:<br/>i.e.) *.c, *.h, !*.o, src/, !bin/</td>
+                <td>include or exclude files or folders:</td>
             </tr>
             <tr>
-                <td><input type="text" id="globe" style="width:200px; height: 20px;"></td>
+                <td><input type="text" id="globe" style="width:200px; height: 20px;" placeholder="*.c, *.h, !*.o, src/, !bin"></td>
             </tr>
             <tr>
                 <td>
