implement history on detail search

--- a/html/detailSearch.html
+++ b/html/detailSearch.html
@@ -15,7 +15,11 @@
                 <td>search word:</td>
             </tr>
             <tr>
-                <td><input type="text" id="sword" style="width:200px; height: 20px;"></td>
+                <td>
+                    <input type="text" id="sword" style="width:200px; height: 20px;" list="histories">
+                    <datalist id="histories">
+                    </datalist>
+                </td>
             <tr>
                 <td>include or exclude files or folders:</td>
             </tr>
